KEEP -> the Keep
KEEP is the token name, Keep is the project name.

--- a/docs/development-process.adoc
+++ b/docs/development-process.adoc
@@ -6,7 +6,7 @@
 :numbered:
 toc::[]
 
-In this document, we describe KEEP development process from an organizational 
+In this document, we describe the Keep development process from an organizational 
 perspective. We identify events and artifacts allowing for a transparent, 
 adaptable and predictable development process.
 
